# Home-Buyer-Fire

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  buildZillowURL.py  example.py  getAddress.py  getAllSoldHomeZillowURLs.py  getBox.py  getHTML.py  getNumZillowResults.py  getURLs.py  getZillowRequestHeaders.py  getZillowURLsonPage.py  getzillowhtml.py  hbf.inp  homeBuyerFire.py  pyproject.toml  readZillowInput.py  requirements.txt  res.inp  rescrape.py  scrapeZillowLinks.py  soldHomeDF.py
hbf/: getCleanedDF.py  hbfMain.py  hbfmain.py
hbf/dataclean/: laundry.py
hbf/helpers/: logger.py  logtofile.py
hbf/preprocess/: buildaddress.py  buildsearchbox.py  getinput.py
hbf/rescrape/: buildZillowURL.py  getAddress.py  getAllSoldHomeZillowURLs.py  getBox.py  getInput.py  getNumZillowPages.py  getNumZillowResults.py  laundry.py  scrapeZillowLinks.py  soldHomeDF.py
hbf/scrape/: buildzillowsearchpageurl.py  gethtml.py  getzillowurls.py  list2frame.py  scrapehomeurl.py  scrapehomeurls.py  scrapepagecount.py  scraperesultcount.py  scrapezillowdata.py
hbf/tests/: hbf.inp  test_buildZillowURL.py  test_buildaddress.py  test_buildsearchbox.py  test_getAddress.py  (+11 more)
src/: getAddress.py  getAllSoldHomeZillowURLs.py  getBox.py  getHTML.py  getInput.py  getNumZillowPages.py  getZillowURLsOnPage.py  reScrape.py  scrapeZillowLinks.py
tests/: getHTML.test.out  res.inp  test_buildZillowURL.py  test_getAddress.py  test_getBox.py  test_getNumZillowPages.py  test_getNumZillowResults.py  test_getZillowURLsOnPage.py  test_scrapeZillowLinks.py  test_soldHomeDF.py
(+8 files in other folders)
