[tool.poetry]
name = "hbf"
version = "0.1.0"
description = "A program to predict a home's sell price using data scraped from the internet"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.3"
geopy = "^2.0.0"
requests = "^2.24.0"
pandas = "^1.1.3"
numpy = "1.19.3"
configparser = "^5.0.0"
progress = "^1.5"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
coverage = "^5.3"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
